feat(package.json): add the name of the author to the project
We need a blameworthy person who will be the responsible for the
project.

Signed-off-by: Ádám Gólya <adam.golya@lab.coop>

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "description": "Example project for git strategy",
   "main": "index.js",
-  "author": "",
+  "author": "Ádám Gólya",
   "license": "ISC"
 }
