--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "Example project for git strategy",
   "main": "index.js",
   "author": "Ádám Gólya",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "koa": "^1.1.2"
+  }
 }
